--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </div>
         <div class="col-lg-6 col-md-12 col-12">
           <div class="header-image">
-            <img src="assets/images/header/Suki-photo.jpg" alt="#" />
+            <img src="assets/images/header/Suki-photo2.png" alt="#" />
           </div>
         </div>
       </div>
@@ -240,7 +240,7 @@
               <circle cx="60.333" cy="132" r="1.66667" fill="#DADADA" />
               <circle cx="104" cy="132" r="1.66667" fill="#DADADA" />
             </svg>
-            <img src="assets/images/about/about-img1.jpg" alt="about" />
+            <img src="assets/images/about/about-img.jpg" alt="about" />
           </div>
         </div>
         <div class="col-lg-6 col-12">
