--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
       <div class="sidebar-menu">
         <h5 class="menu-title">Quick Links</h5>
         <ul>
-          <li><a href="javascript:void(0)">About Me</a></li>
-          <li><a href="javascript:void(0)">Services</a></li>
-          <li><a href="javascript:void(0)">Contact Us</a></li>
+          <li><a href="#about-area">About Me</a></li>
+          <li><a href="#services">Services</a></li>
+          <li><a href="#contact">Contact Us</a></li>
         </ul>
       </div>
       <!-- menu -->
@@ -111,10 +111,7 @@
             <a href="javascript:void(0)"><i class="lni lni-twitter-original"></i></a>
           </li>
           <li>
-            <a href="javascript:void(0)"><i class="lni lni-linkedin-original"></i></a>
-          </li>
-          <li>
-            <a href="javascript:void(0)"><i class="lni lni-youtube"></i></a>
+            <a href="https://www.linkedin.com/in/osuki-uyameda-2a3aa1323"><i class="lni lni-linkedin-original"></i></a>
           </li>
         </ul>
       </div>
@@ -152,7 +149,7 @@
 
   <!--====== ABOUT FIVE PART START ======-->
 
-  <section class="about-area about-five">
+  <section id="about-area" class="about-area about-five">
     <div class="container">
       <div class="row align-items-center">
         <div class="col-lg-6 col-12">
@@ -251,7 +248,7 @@
               <nav>
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
                   <button class="nav-link active" id="nav-who-tab" data-bs-toggle="tab" data-bs-target="#nav-who"
-                    type="button" role="tab" aria-controls="nav-who" aria-selected="true">Discipline</button>
+                    type="button" role="tab" aria-controls="nav-who" aria-selected="true">About Me</button>
                   <button class="nav-link" id="nav-vision-tab" data-bs-toggle="tab" data-bs-target="#nav-vision"
                     type="button" role="tab" aria-controls="nav-vision" aria-selected="false">My Vision</button>
                   <button class="nav-link" id="nav-portfolio-tab" data-bs-toggle="tab" data-bs-target="#nav-portfolio"
@@ -454,13 +451,13 @@
                 <div class="price">
                   <span class="duration">Starting at </span>
                   <h2 class="amount">
-                    <span class="currency">$</span>1,000<span class="duration">/project </span>
+                    <span class="currency">$</span>1000<span class="duration">/project </span>
                   </h2>
                 </div>
             </div>
 
             <div class="light-rounded-buttons">
-              <a href="javascript:void(0)" class="btn primary-btn-outline">
+              <a href="#contact" class="btn primary-btn-outline">
                 Get Started
               </a>
             </div>
@@ -491,7 +488,7 @@
             </div>
 
             <div class="light-rounded-buttons">
-              <a href="javascript:void(0)" class="btn primary-btn-outline">
+              <a href="#contact" class="btn primary-btn-outline">
                 Get Started
               </a>
             </div>
@@ -717,8 +714,7 @@
                   hierarchies.
                 </p>
                 <p class="copyright-text">
-                  <span>© 2024 Ayro UI.</span>Designed and Developed by
-                  <a href="javascript:void(0)" rel="nofollow"> Ayro UI </a>
+                  <span>© 2024 Ayro UI.</span>Designed and Developed by Ayro UI
                 </p>
               </div>
               <!-- End Single Widget -->
@@ -735,33 +731,18 @@
                 </ul>
               </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-12">
-              <!-- Single Widget -->
-              <div class="footer-widget newsletter">
-                <h5>Subscribe</h5>
-                <p>Subscribe to our newsletter for the latest updates</p>
-                <form action="#" method="get" target="_blank" class="newsletter-form">
-                  <input name="EMAIL" placeholder="Email address" required="required" type="email" />
-                  <div class="button">
-                    <button class="sub-btn">
-                      <i class="lni lni-envelope"></i>
-                    </button>
-                  </div>
-                </form>
-              </div>
-              <!-- End Single Widget -->
-            </div>
-          </div>
         </div>
       </div>
     </div>
-    <!--/ End Footer Top -->
-  </footer>
-  <!--/ End Footer Area -->
+  </div>
+</div>
+<!--/ End Footer Top -->
+</footer>
+<!--/ End Footer Area -->
 
 	<div class="made-in-ayroui mt-4">
 		<a href="https://ayroui.com" target="_blank" rel="nofollow">
-		  <img style="width:220px" src="assets/images/ayroui.svg">
+
 		</a>
 	</div>
 
